Ensure all pages of the PWA fill the available space and do not bleed over the viewport

--- a/website/static/css/tools/logger/main.css
+++ b/website/static/css/tools/logger/main.css
@@ -6,6 +6,8 @@
     align-items: flex-start;
     background-color: hsl(219, 79%, 96%);
     height: 100vh;
+    max-height: -webkit-fill-available;
+    max-height: -moz-available;
 }
 
 .container {
